funcionalidad mostrar productos para el administrador

--- a/src/main/resources/templates/productos/create.html
+++ b/src/main/resources/templates/productos/create.html
@@ -68,7 +68,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="price">Precio:</label>
       <div class="col-sm-10">
-        <input type="number" class="form-control" step="any" id="price" name="precio"
+        <input type="number" class="form-control" step="any" id="price" name="price"
         placeholder="Ingrese el precio del producto" autocomplete="off" required>
       </div>
     </div>
