--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -54,10 +54,10 @@
         </div>
       </div>
     </div>
-    <form action="#" method="post">
+    <form th:action="@{/user/save}" method="post">
       <div class="form-group">
-        <label for="nombres">Nombres:</label> <input type="text"
-          class="form-control" id="nombre" name="nombre" required
+        <label for="name">Nombres:</label> <input type="text"
+          class="form-control" id="name" name="name" required
           placeholder="Ingrese sus nombres" autocomplete="off">
       </div>
 
@@ -68,13 +68,13 @@
       </div>
 
       <div class="form-group">
-        <label for="direccion">Dirección:</label> <input type="text"
-          class="form-control" id="direccion" name="direccion" required
+        <label for="direction">Dirección:</label> <input type="text"
+          class="form-control" id="direction" name="direction" required
           placeholder="Ingrese su dirección" autocomplete="off">
       </div>
 
       <div class="form-group">
-        <label for="pwd">Contraseña</label> <input type="password"
+        <label for="password">Contraseña</label> <input type="password"
           class="form-control" id="password" name="password" required placeholder="Ingrese su contraseña" autocomplete="off">
       </div>
       <div class="col-sm-2">
