--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -21,8 +21,12 @@
 
 <body>
 
-   <!-- Navigation -->
-  	<div th:include="usuario/template_usuario::header">
+ <!-- Navigation -->
+  	<div th:include="usuario/template_usuario::header" th:if="${sesion==null}">
+  	</div>
+  	
+  	<div th:include="usuario/template_usuario::header-user" th:unless="${sesion==null}">
+  	
   	</div>
 
     <!-- Page Content -->
