--- a/src/main/resources/templates/usuario/compras.html
+++ b/src/main/resources/templates/usuario/compras.html
@@ -57,10 +57,10 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td >4555454</td>
-                  <td >Fecha de Compra</td>
-                  <td >Total</td>
+                <tr th:each="order: ${orders}">
+                  <td th:text="${order.number}" ></td>
+                  <td th:text="${order.CreationDate}"></td>
+                  <td th:text="${order.total}">Total</td>
                   <td><a href="detallecompra.html" class="btn btn-success">Ver Detalle</a></td>
                 </tr>
               </tbody>
