--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -26,6 +26,7 @@
 			<div class="dropdown-menu"
 				aria-labelledby="navbarDropdownMenuLink">
 				<a class="dropdown-item" th:href="@{/products}">Productos</a> 
+				<a class="dropdown-item" th:href="@{/user/cerrar}">Salir</a>
 			</div></li>
           </ul>
         </div>
