--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -25,9 +25,11 @@
 			aria-haspopup="true" aria-expanded="false"> ADMIN </a>
 			<div class="dropdown-menu"
 				aria-labelledby="navbarDropdownMenuLink">
-				<a class="dropdown-item" th:href="@{/products}">Productos</a> 
+				<a class="dropdown-item" th:href="@{/products}">Productos</a>
+				<a class="dropdown-item" th:href="@{/administrador/users}">Usuarios</a>  
 				<a class="dropdown-item" th:href="@{/user/cerrar}">Salir</a>
-			</div></li>
+			</div>
+			</li>
           </ul>
         </div>
       </div>
