--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -26,7 +26,8 @@
 			<div class="dropdown-menu"
 				aria-labelledby="navbarDropdownMenuLink">
 				<a class="dropdown-item" th:href="@{/products}">Productos</a>
-				<a class="dropdown-item" th:href="@{/administrador/users}">Usuarios</a>  
+				<a class="dropdown-item" th:href="@{/administrador/users}">Usuarios</a>
+				<a class="dropdown-item" th:href="@{/administrador/orders}">Ordenes</a>   
 				<a class="dropdown-item" th:href="@{/user/cerrar}">Salir</a>
 			</div>
 			</li>
