--- a/src/main/resources/templates/administrador/detalleorden.html
+++ b/src/main/resources/templates/administrador/detalleorden.html
@@ -16,12 +16,12 @@
 
   <!-- Custom styles for this template -->
   <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
-
+  
 </head>
 
 <body>
 
- <!-- Navigation -->
+   <!-- Navigation -->
   <div th:include="administrador/template_admin.html::header"></div>
 
     <!-- Page Content -->
@@ -30,12 +30,13 @@
 
       <!-- Page Heading/Breadcrumbs -->
       <h1 class="mt-4 mb-3">
-        Spring eCommerce <small>Ordenes</small>
+        Spring eCommerce <small>Detalles</small>
       </h1>
 
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-        <li class="breadcrumb-item active">Ordenes</li>
+        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item"><a href="compras.html">Compras</a></li>
+        <li class="breadcrumb-item active">Detalle de Compra</li>
       </ol>
 
       <!-- Blog Post -->
@@ -46,18 +47,18 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th scope="col">No. de Orden</th>
-                  <th scope="col">Fecha</th>
-                  <th scope="col">Valor</th>
-                  <th scope="col">Acción</th>
+                  <th scope="col">Cantidad</th>
+                  <th scope="col">Producto</th>                  
+                  <th scope="col">Precio</th>
+                  <th scope="col">Total</th>                  
                 </tr>
               </thead>
               <tbody>
-                <tr th:each="order:${orders}" >
-                  <td th:text="${order.number}"></td>
-                  <td th:text="${order.creationDate}"></td>
-                  <td th:text="${order.total}"></td>
-                  <td><a th:href="@{/administrador/detalle/{id} (id=${order.id})}" class="btn btn-success">Ver Detalle</a></td>
+                <tr th:each="detail:${detalles}">
+                  <td th:text="${detail.quantity}"></td>
+                  <td th:text="${detail.name}"></td>
+                  <td th:text="${detail.price}"></td>
+                  <td th:text="${detail.total}"></td>
                 </tr>
               </tbody>
             </table>
@@ -75,7 +76,8 @@
     <!-- Bootstrap core JavaScript -->
     <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
     <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-    
+
 </body>
 
 </html>
+
